# gfal-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CLAUDE.md  LICENSE  Makefile  README.md  gfal-cli.spec  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml  tests.yml
docs/: gfal2-util-help-reference.md
src/gfal_cli/: base.py  commands.py  copy.py  fs.py  ls.py  rm.py  shell.py  tape.py  tpc.py  tui.py  webdav.py
tests/: conftest.py  helpers.py  test_base.py  test_cat.py  test_chmod.py  test_cli.py  test_cp.py  test_fs.py  test_integration_eospilot.py  test_integration_eospublic.py  test_ipv.py  test_ls.py  test_mkdir.py  test_progress.py  test_rename.py  test_rm.py  test_save.py  test_shell.py  test_stat.py  test_sum.py  test_tpc.py  test_tui.py  test_tui_checksum_logic.py  test_tui_movement.py  test_tui_navigation.py  test_tui_swap.py  test_tui_yank_multi.py  test_tui_yank_toggle.py  test_utils.py  test_webdav.py  test_xattr.py
